--- a/.ailasrc
+++ b/.ailasrc
@@ -1,3 +1,7 @@
+#add to /etc/bash.bashrc
+#[[ -s "$HOME/.ailasrc" ]] && . "$HOME/.ailasrc"
+#echo $HOME
+
 ###apt-get alias####
 alias acs='apt-cache search'
 alias agu='sudo apt-get update'
@@ -5,10 +9,12 @@ alias agg='sudo apt-get upgrade'
 alias agd='sudo apt-get dist-upgrade'
 alias agi='sudo apt-get install'
 alias agr='sudo apt-get remove'
+
 ###add by xlgwr
 alias update="sudo apt-fast update && (echo 'y' | sudo apt-fast upgrade) && (echo 'y' | sudo apt-fast dist-upgrade)"
 alias cls="clear"
 alias lm="more $1"
+
 ###add rvm
 PATH=$PATH:$HOME/.rvm/bin # Add RVM to PATH for scripting
 [[ -s "$HOME/.rvm/scripts/rvm" ]] && . "$HOME/.rvm/scripts/rvm"
@@ -20,13 +26,4 @@ PATH=$PATH:$HOME/.rvm/bin # Add RVM to PATH for scripting
 #font-size=15
 #############
 #echo -en "\e]P7ffffff" && fbterm && clear
-fbterm && echo -en "\e]P7ffffff" && clear
-alias update="sudo apt-fast update && (echo 'y' | sudo apt-fast upgrade) && (echo 'y' | sudo apt-fast dist-upgrade)"
-alias cls="clear"
-alias lm="more $1"
-#add by xlgwr for linux china
-#font-names=mono,"YaHei Consolas Hybrid",Monaco,"Microsoft YaHei"
-#font-size=15
-#############
-#echo -en "\e]P7ffffff" && fbterm && clear
-fbterm && echo -en "\e]P7ffffff" && clear
+#fbterm && echo -en "\e]P7ffffff" && clear
