--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/eshell/*
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
@@ -20,4 +21,3 @@
 *#
 .*rc
 *.dat
-eshell/*
