--- a/elpa/slime/.travis.yml
+++ b/elpa/slime/.travis.yml
@@ -8,8 +8,10 @@ env:
   # for emacs24, use more combinations
   - "CHECK_TARGET=check       LISP=sbcl  EMACS=emacs24"
   - "CHECK_TARGET=check       LISP=cmucl EMACS=emacs24"
+  - "CHECK_TARGET=check       LISP=ccl   EMACS=emacs24"
   - "CHECK_TARGET=check-fancy LISP=sbcl  EMACS=emacs24"
   - "CHECK_TARGET=check-fancy LISP=cmucl EMACS=emacs24"
+  - "CHECK_TARGET=check-fancy LISP=ccl   EMACS=emacs24"
 
   # also, for emacs24/sbcl test some more contribs in isolation
   - "CHECK_TARGET=check-repl LISP=sbcl EMACS=emacs24"
